# SQLAlchemy-Events

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sqlalchemy_events/: __init__.py  core.py  decorators.py  default_logger.py  discovery.py  enums.py  events.py  exceptions.py  handler.py  handlers.py  registry.py  types.py  utils.py
src/sqlalchemy_events/callbacks_strategies/: base.py  postgres_callback.py
src/sqlalchemy_events/init_triggers_strategies/: base.py  postgres_init_triggers.py
src/tests/: conftest.py  test_autodiscover.py  test_handlers.py  test_is_created_triggers.py  test_models.py  test_sa_events.py  test_with_events_deco.py
