[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sqlalchemy-events-lib"
version = "0.1.0"
description = "Event-driven extension for SQLAlchemy that enables listening to database CUD events. This library allows you to react to database changes in real time using a clean, declarative API."
requires-python = ">=3.12"
authors = [
    {name = "Alexey Kostarev", email = "normjkeeewm@gmail.com"}
]
dependencies = [
    "sqlalchemy>=2.0.49",
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = []

[project.urls]
Homepage = "https://github.com/NormanwOw/SQLAlchemy-Events"
Repository = "https://github.com/NormanwOw/SQLAlchemy-Events"
Issues = "https://github.com/NormanwOw/SQLAlchemy-Events/issues"
